# redmascotera-back

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  uwsgi.ini
.deploy/nginx/: Dockerfile  nginx.conf
.deploy/nginx/conf.d/: admin_app.conf
app/: models.py  tests.py  urls.py
app/api/example/: example_endpoints.py  example_models.py  example_tests.py  example_urls.py
app/api/users/: __init__.py  users_endpoints.py  users_models.py  users_tests.py  users_urls.py
app/management/commands/: createapi.py
app/management/module_maker/: __init__.py
app/management/module_maker/boilerplate/: __init__.py.mako  {name}_endpoints.py.mako  {name}_models.py.mako  {name}_tests.py.mako  {name}_urls.py.mako
app/migrations/: 0001_initial.py
authentication/: urls.py
backend/: settings.py  urls.py
